nixrs-derive-tests/tests/ui/deserialize_bad_type.stderr
error[E0277]: the trait bound `BadType: NixDeserialize` is not satisfied
 --> tests/ui/deserialize_bad_type.rs
  |
  |     version: BadType,
  |              ^^^^^^^ the trait `NixDeserialize` is not implemented for `BadType`
  |
  = help: the following other types implement trait `NixDeserialize`:
            ()
            BTreeMap<K, V>
            BTreeSet<T>
            DerivedPath
            Realisation
            Test
            Vec<T>
            bool
          and $N others
note: required by a bound in `try_read_value`
 --> $WORKSPACE/nixrs/src/daemon/de/mod.rs
  |
  |     fn try_read_value<V: NixDeserialize>(
  |                          ^^^^^^^^^^^^^^ required by this bound in `NixRead::try_read_value`
